# wagtail-portablepages

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  tox.ini
portablepages/: __init__.py  apps.py  forms.py  utils.py  views.py  wagtail_hooks.py
portablepages/templates/portablepages/: import_page.html
portablepages/tests/: settings.py  test_utils.py  test_views.py  urls.py
